# svunit

./: .gitignore  pyproject.toml
src_python/svunit/: build_svunit.py  clean_svunit.py  create_testrunner.py  create_testsuite.py  create_unit_test.py  model.py  run_svunit.py  utils.py
src_python/svunit/simulators/: modelsim.py  vcs.py  verilator.py  xcelium.py  xsim.py
src_python/svunit/templates/: testrunner.jinja2  testsuite.jinja2  unit_test.jinja2
