[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "svunit"
dependencies = [
    "jinja2>=3.1.2"
]
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    {name = "Tudor Timisescu"},
    {name = "Lukas vinkx"}
]
description = "A Python implementation of the original svunit (perl)"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["svunit", "testbench", "systemverilog", "hdl"]

[project.scripts]
runSVUnit = "svunit.run_svunit:main"
create_unit_test = "svunit.create_unit_test:main"



[tool.hatch.version]
path = "src_python/svunit/__init__.py"

[tool.hatch.build.targets.wheel]
sources = ["src_python"]

[tool.hatch.build.targets.wheel.force-include]
"svunit_base" = "svunit/svunit_base"
